--- a/app/config.json
+++ b/app/config.json
@@ -1,5 +1,5 @@
 {
-  "serviceName": "Service name goes here",
+  "serviceName": "Life event registration",
   "plugins": {
     "govuk-frontend": {
       "rebrand": true
